--- a/myteam.html
+++ b/myteam.html
@@ -82,6 +82,30 @@
           <td>Defender</td>
           <td>Benjamin Mendy</td>
         </tr>
+         <tr>
+          <td>Midfielder</td>
+          <td>Lass Diarra</td>
+        </tr>
+                <tr>
+          <td>Midfielder</td>
+          <td>Abou Diaby</td>
+        </tr>
+                <tr>
+          <td>Midfielder</td>
+          <td>Remy Cabella</td>
+        </tr>
+                <tr>
+          <td>Midfielder</td>
+          <td>GK Nkoudou</td>
+        </tr>
+                <tr>
+          <td>Forward</td>
+          <td>Lucas Ocampos</td>
+        </tr>
+         <tr>
+          <td>Forward</td>
+          <td>Batshuayi</td>
+        </tr>
       </tbody>
     </table>
       </div>
